<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/checker_board_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_padding"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    tools:context="com.gmail.amaarquadri.checkers.ui.MainMenu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/title_colour"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_weight="1"
        android:onClick="startSinglePlayerGameSetup"
        android:text="@string/single_player"
        android:textSize="@dimen/large_text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_weight="1"
        android:onClick="startTwoPlayerGame"
        android:text="@string/two_player"
        android:textSize="@dimen/large_text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_weight="1"
        android:onClick="viewHighScores"
        android:text="@string/high_scores"
        android:textSize="@dimen/large_text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="editSettings"
        android:text="@string/settings"
        android:textSize="@dimen/large_text_size" />
</LinearLayout>
